# gmi

./: .gitignore  20A.MD.CSV  8A_1.MD.CSV  NV-19A.MD-MOD.CSV  NV-19A.MD.CSV  NV-20A.MD.CSV  NV-22.MD.CSV  README.md  cad.ipynb  cad.py  cad_colorama.py  ltp.ipynb  pervol.ipynb  point.ipynb  requirements.txt  sec.ipynb  sec.xlsx  test.ipynb
.github/workflows/: release.yml
pervol/: EFICIENCIA MARZO TOPOGRAFÍA - 2022.xlsx  avances.xlsx  efi_topo.ipynb  pervol.ipynb  plotly.ipynb  pv.csv  report.ipynb
topo/: .gitignore  Cargo.toml
topo/src/: core.rs  data.rs  draw.rs  error.rs  helpers.rs  lib.rs  main.rs  models.rs  traits.rs
topo/tests/: common.rs  test_data.rs
