[package]
name = "topo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
colored = "3.0.0"
csv = "1.3.1"
defer = "0.2.1"
dxf = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.14"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
